--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cy:open": "npx cypress open"
+    "cy:open": "npx cypress open",
+    "cy:run:record": "npx cypress run --record --key 1aab1135-20f4-42a3-93e3-5b46416a9848"
   },
   "repository": {
     "type": "git",
