--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "cy:open": "npx cypress open",
-    "cy:run:record": "npx cypress run --record --key 1aab1135-20f4-42a3-93e3-5b46416a9848",
-    "test:qauto": "cypress run --config-file cypress.config.qauto.js",
-    "test:qauto2": "cypress run --config-file cypress.config.qauto2.js",
-    "open:qauto": "cypress open --config-file cypress.config.qauto.js",
-    "open:qauto2": "cypress open --config-file cypress.config.qauto2.js"
-  },
+  "cy:open": "npx cypress open",
+  "test:qauto": "cypress run --spec 'cypress/e2e/car_expense_api.cy.js' --config-file cypress.config.qauto.js",
+  "test:qauto:headless": "cypress run --config-file cypress.config.qauto.js --headless",
+  "test:qauto:chrome": "cypress run --config-file cypress.config.qauto.js --browser chrome --headless",
+  "test:qauto:firefox": "cypress run --config-file cypress.config.qauto.js --browser firefox --headless",
+  "test:qauto:edge": "cypress run --config-file cypress.config.qauto.js --browser edge --headless",
+  "test:qauto2": "cypress run --config-file cypress.config.qauto2.js --headed",
+  "test:qauto2:headless": "cypress run --config-file cypress.config.qauto2.js --headless",
+  "open:qauto": "cypress open --config-file cypress.config.qauto.js",
+  "open:qauto2": "cypress open --config-file cypress.config.qauto2.js"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Tetja-na/CypressAutoNew.git"
@@ -28,6 +31,7 @@
   "devDependencies": {
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^5.0.0",
-    "mochawesome-report-generator": "^6.2.0"
+    "mochawesome-report-generator": "^6.2.0",
+    "cypress": "^13.6.0"
   }
 }
