--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -17,5 +17,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Verify Cypress
+        run: npx cypress verify
+
       - name: Run Cypress tests
-        run: npx cypress run
+        run: npx cypress run --browser chrome
